--- a/builds/msvc/vs2012/libzmq/libzmq.vcxproj.filters
+++ b/builds/msvc/vs2012/libzmq/libzmq.vcxproj.filters
@@ -139,6 +139,9 @@
     <ClCompile Include="..\..\..\..\src\router.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\scatter.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\select.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -209,6 +212,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\curve_server.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\gather.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\gssapi_mechanism_base.cpp">
@@ -438,6 +444,9 @@
     <ClInclude Include="..\..\..\..\src\session_base.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\scatter.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\select.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
@@ -502,6 +511,9 @@
       <Filter>src\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\curve_server.hpp">
+      <Filter>src\include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\gather.hpp">
       <Filter>src\include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\gssapi_mechanism_base.hpp">
