Problem: scatter/gather are not yet stable APIs
Solution: mark them as DRAFT APIs

--- a/Makefile.am
+++ b/Makefile.am
@@ -394,7 +394,6 @@ test_apps = \
 	tests/test_sockopt_hwm \
 	tests/test_heartbeats \
 	tests/test_stream_exceeds_buffer \
-	tests/test_scatter_gather \
 	tests/test_pub_invert_matching
 
 tests_test_system_SOURCES = tests/test_system.cpp
@@ -594,9 +593,6 @@ tests_test_heartbeats_LDADD = src/libzmq.la
 tests_test_stream_exceeds_buffer_SOURCES = tests/test_stream_exceeds_buffer.cpp
 tests_test_stream_exceeds_buffer_LDADD = src/libzmq.la
 
-tests_test_scatter_gather_SOURCES = tests/test_scatter_gather.cpp
-tests_test_scatter_gather_LDADD = src/libzmq.la
-
 tests_test_pub_invert_matching_SOURCES = tests/test_pub_invert_matching.cpp
 tests_test_pub_invert_matching_LDADD = src/libzmq.la
 
@@ -722,7 +718,8 @@ test_apps += tests/test_poller \
 	tests/test_thread_safe \
 	tests/test_timers \
 	tests/test_radio_dish \
-	tests/test_udp
+	tests/test_udp \
+	tests/test_scatter_gather
 
 tests_test_poller_SOURCES = tests/test_poller.cpp
 tests_test_poller_LDADD = src/libzmq.la
@@ -741,6 +738,9 @@ tests_test_radio_dish_LDADD = src/libzmq.la
 
 tests_test_udp_SOURCES = tests/test_udp.cpp
 tests_test_udp_LDADD = src/libzmq.la
+
+tests_test_scatter_gather_SOURCES = tests/test_scatter_gather.cpp
+tests_test_scatter_gather_LDADD = src/libzmq.la
 endif
 
 check_PROGRAMS = ${test_apps}
