Problem: test_pub_invert_matching not ignored
Solution: add it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ test_scatter_gather
 test_socketopt_hwm
 test_use_fd_ipc
 test_use_fd_tcp
+test_pub_invert_matching
 tests/test*.log
 tests/test*.trs
 src/platform.hpp*
