--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,15 @@ env:
 
 matrix:
   exclude:
-    -  env: BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
-       os: osx
-    -  env: BUILD_TYPE=valgrind CURVE=tweetnacl DRAFT=enabled
-       os: osx
+  - env: BUILD_TYPE=coverage CURVE=tweetnacl DRAFT=enabled
+    os: osx
+  - env: BUILD_TYPE=valgrind CURVE=tweetnacl DRAFT=enabled
+    os: osx
   include:
-    -  env: BUILD_TYPE=default CURVE=tweetnacl IPv6=ON
-       os: linux
-       dist: precise
-       sudo: false
+  - env: BUILD_TYPE=default CURVE=tweetnacl IPv6=ON
+    os: linux
+    dist: precise
+    sudo: false
 
 sudo: required
 
@@ -49,3 +49,19 @@ before_script:
 
 # Build and check this project according to the BUILD_TYPE
 script: ./ci_build.sh
+
+# Deploy tags
+before_deploy:
+- . ./ci_deploy.sh
+deploy:
+  provider: releases
+  api_key:
+    secure: vGB5E+A8wxm2J1GJZzmIgT9PrjEzvd9gE8iui8FyxSbxAsW9vFZFGZC/21sTtpVcmRarwQCHH1UEbtg+nJwN2iD9YzMRnSVks8xqP+b709YW+VXaMuhZgTzWa74IorQku7NuvLibvQk72/OSgdwPGaNJ6f5AX9pnWVWbEoW1svE=
+  file_glob: true
+  file: ${LIBZMQ_DEPLOYMENT}
+  skip_cleanup: true
+  on:
+    repo: zeromq/libzmq
+    branch: master
+    tags: true
+    condition: "$TRAVIS_OS_NAME =~ (linux) && $BUILD_TYPE =~ (default) && $CURVE =~ (libsodium) && -z $DRAFT"
